--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -42,167 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ffa723c1-2843-424d-8ee3-90eb39dc843e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-05T20:39:58.183768Z",
-     "start_time": "2023-02-05T20:39:58.125454Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from dask import dataframe as dd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import kendalltau\n",
-    "from scipy.stats import rankdata\n",
-    "from scipy.stats import norm\n",
-    "import fastHDMI as mi\n",
-    "from sklearn.linear_model import LassoCV\n",
-    "from sklearn.linear_model import ElasticNetCV\n",
-    "from sklearn.linear_model import RidgeCV\n",
-    "from sklearn.linear_model import LarsCV\n",
-    "from sklearn.linear_model import LassoLarsCV\n",
-    "from sklearn.metrics import r2_score\n",
-    "import multiprocess as mp\n",
-    "from tqdm import tqdm as tqdm\n",
-    "import os\n",
-    "\n",
-    "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
-    "# abide = pd.read_csv(csv_file, encoding='unicode_escape', engine=\"c\")\n",
-    "abide = dd.read_csv(csv_file, sample=1250000)\n",
-    "\n",
-    "# _abide_name = abide.columns.tolist()[1:]\n",
-    "_abide_name = list(abide.columns)[1:]\n",
-    "\n",
-    "# print(_abide_name)\n",
-    "\n",
-    "# we don't inlcude age and sex in the screening since they should always be included in the model\n",
-    "abide_name = [_abide_name[-3]] + _abide_name[1:-3]\n",
-    "\n",
-    "np.save(r\"./ABIDE_columns\", _abide_name[1:-3])\n",
-    "# so that the left first column is the outcome and the rest columns are areas\n",
-    "\n",
-    "print(\"engine:\")\n",
-    "print(\"Our developed FFT-based MI calculation:\")\n",
-    "\n",
-    "mi_output = mi.continuous_screening_csv_parallel(csv_file,\n",
-    "                                                 _usecols=abide_name,\n",
-    "                                                 csv_engine=\"c\",\n",
-    "                                                 sample=1250000,\n",
-    "                                                 multp=10,\n",
-    "                                                 core_num=10,\n",
-    "                                                 share_memory=True)\n",
-    "np.save(r\"./ABIDE_age_MI_output\", mi_output)\n",
-    "\n",
-    "print(\"sklearn MI calculation:\")\n",
-    "\n",
-    "skmi_output = mi.continuous_skMI_screening_csv_parallel(csv_file,\n",
-    "                                                        _usecols=abide_name,\n",
-    "                                                        csv_engine=\"c\",\n",
-    "                                                        sample=1250000,\n",
-    "                                                        multp=10,\n",
-    "                                                        core_num=10,\n",
-    "                                                        share_memory=True)\n",
-    "np.save(r\"./ABIDE_age_skMI_output\", skmi_output)\n",
-    "\n",
-    "print(\"Pearson's correlation calculation:\")\n",
-    "\n",
-    "pearson_output = mi.Pearson_screening_csv_parallel(csv_file,\n",
-    "                                                   _usecols=abide_name,\n",
-    "                                                   csv_engine=\"c\",\n",
-    "                                                   sample=1250000,\n",
-    "                                                   multp=10,\n",
-    "                                                   core_num=10,\n",
-    "                                                   share_memory=True)\n",
-    "np.save(r\"./ABIDE_age_Pearson_output\", pearson_output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9c3680c",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-05T20:40:06.526666Z",
-     "start_time": "2023-02-05T20:40:06.486295Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from dask import dataframe as dd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import kendalltau\n",
-    "from scipy.stats import rankdata\n",
-    "from scipy.stats import norm\n",
-    "import fastHDMI as mi\n",
-    "from sklearn.linear_model import LassoCV\n",
-    "from sklearn.linear_model import ElasticNetCV\n",
-    "from sklearn.linear_model import RidgeCV\n",
-    "from sklearn.linear_model import LarsCV\n",
-    "from sklearn.linear_model import LassoLarsCV\n",
-    "from sklearn.metrics import r2_score\n",
-    "import multiprocess as mp\n",
-    "from tqdm import tqdm as tqdm\n",
-    "import os\n",
-    "\n",
-    "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
-    "# abide = pd.read_csv(csv_file, encoding='unicode_escape', engine=\"c\")\n",
-    "abide = dd.read_csv(csv_file, sample=1250000)\n",
-    "\n",
-    "# _abide_name = abide.columns.tolist()[1:]\n",
-    "_abide_name = list(abide.columns)[1:]\n",
-    "\n",
-    "# print(_abide_name)\n",
-    "\n",
-    "# we don't inlcude age and sex in the screening since they should always be included in the model\n",
-    "abide_name = [_abide_name[-1]] + _abide_name[1:-3]\n",
-    "# so that the left first column is the outcome and the rest columns are areas\n",
-    "\n",
-    "print(\"engine:\")\n",
-    "print(\"Our developed FFT-based MI calculation:\")\n",
-    "\n",
-    "mi_output = mi.binary_screening_csv_parallel(csv_file,\n",
-    "                                             _usecols=abide_name,\n",
-    "                                             csv_engine=\"c\",\n",
-    "                                             sample=1250000,\n",
-    "                                             multp=10,\n",
-    "                                             core_num=10,\n",
-    "                                             share_memory=True)\n",
-    "np.save(r\"./ABIDE_diagnosis_MI_output\", mi_output)\n",
-    "\n",
-    "print(\"Pearson's correlation calculation:\")\n",
-    "\n",
-    "pearson_output = mi.Pearson_screening_csv_parallel(csv_file,\n",
-    "                                                   _usecols=abide_name,\n",
-    "                                                   csv_engine=\"c\",\n",
-    "                                                   sample=1250000,\n",
-    "                                                   multp=10,\n",
-    "                                                   core_num=10,\n",
-    "                                                   share_memory=True)\n",
-    "np.save(r\"./ABIDE_diagnosis_Pearson_output\", pearson_output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1221a072",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-10T22:08:46.142691Z",
-     "start_time": "2023-02-10T22:08:46.106681Z"
+     "end_time": "2023-02-10T22:24:21.206689Z",
+     "start_time": "2023-02-10T22:24:21.165062Z"
     }
    },
    "outputs": [],
@@ -408,12 +253,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-10T22:08:50.736479Z",
-     "start_time": "2023-02-10T22:08:46.594130Z"
+     "end_time": "2023-02-10T22:24:25.019555Z",
+     "start_time": "2023-02-10T22:24:21.635633Z"
     }
    },
    "outputs": [],
@@ -579,122 +424,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b5cb6b81",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-05T20:40:13.475591Z",
-     "start_time": "2023-02-05T20:40:13.408879Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from dask import dataframe as dd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import kendalltau\n",
-    "from scipy.stats import rankdata\n",
-    "from scipy.stats import norm\n",
-    "import fastHDMI as mi\n",
-    "from sklearn.linear_model import LassoCV\n",
-    "from sklearn.linear_model import ElasticNetCV\n",
-    "from sklearn.linear_model import RidgeCV\n",
-    "from sklearn.linear_model import LarsCV\n",
-    "from sklearn.linear_model import LassoLarsCV\n",
-    "from sklearn.metrics import r2_score\n",
-    "import multiprocess as mp\n",
-    "from tqdm import tqdm as tqdm\n",
-    "import os\n",
-    "\n",
-    "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
-    "original_df = pd.read_csv(csv_file, encoding='unicode_escape', engine='c')\n",
-    "columns = np.load(r\"../ABIDE_columns.npy\")\n",
-    "abide_dep = np.load(r\"../ABIDE_age_MI_output.npy\")  # dep_measure\n",
-    "\n",
-    "\n",
-    "def testing_error(num_covariates=20,\n",
-    "                  training_proportion=.8,\n",
-    "                  fun=ElasticNetCV,\n",
-    "                  outcome_name=\"AGE_AT_SCAN\",\n",
-    "                  seed=1):\n",
-    "    np.random.seed(seed)\n",
-    "    _usecols = np.hstack((outcome_name, \"SEX\", \"DX_GROUP\",\n",
-    "                          columns[np.argsort(-abide_dep)][:num_covariates]))\n",
-    "    df = original_df[_usecols].dropna(inplace=False).sample(\n",
-    "        frac=1, random_state=seed, replace=False).reset_index(drop=True,\n",
-    "                                                              inplace=False)\n",
-    "    if df.shape[0] > 20:\n",
-    "        train_test_div = int(np.around(df.shape[0] * training_proportion))\n",
-    "        X_train, y_train = df.iloc[:train_test_div,\n",
-    "                                   1:], df.iloc[:train_test_div, 0]\n",
-    "        X_test, y_test = df.iloc[train_test_div:, 1:], df.iloc[train_test_div:,\n",
-    "                                                               0]\n",
-    "        if fun in [ElasticNetCV, LassoCV]:\n",
-    "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
-    "        elif fun in [RidgeCV]:  # RidgeCV doesn't have seed setting and n_jobs\n",
-    "            fit = fun(cv=5).fit(X_train, y_train)\n",
-    "        elif fun in [LarsCV, LassoLarsCV\n",
-    "                     ]:  # LarsCV doesn't have seed setting but have n_jobs\n",
-    "            fit = fun(cv=5, n_jobs=10).fit(X_train, y_train)\n",
-    "        y_pred = fit.predict(X_test)\n",
-    "        out = r2_score(y_test, y_pred)\n",
-    "    else:\n",
-    "        out = np.nan\n",
-    "    return out\n",
-    "\n",
-    "\n",
-    "def testing_error_rep(num_covariates=20,\n",
-    "                      training_proportion=.8,\n",
-    "                      fun=ElasticNetCV,\n",
-    "                      outcome_name=\"AGE_AT_SCAN\",\n",
-    "                      num_rep=10):\n",
-    "    def _testing_error(seed):\n",
-    "        return testing_error(num_covariates=num_covariates,\n",
-    "                             training_proportion=training_proportion,\n",
-    "                             fun=fun,\n",
-    "                             outcome_name=outcome_name,\n",
-    "                             seed=seed)\n",
-    "\n",
-    "    seeds = np.arange(num_rep)\n",
-    "    return np.array(list(map(_testing_error, seeds)))\n",
-    "\n",
-    "\n",
-    "def testing_error_num_attr(num_attr,\n",
-    "                           training_proportion=.8,\n",
-    "                           fun=ElasticNetCV,\n",
-    "                           outcome_name=\"AGE_AT_SCAN\",\n",
-    "                           num_rep=10):\n",
-    "    def _testing_error_rep(_num_attr):\n",
-    "        return testing_error_rep(num_covariates=_num_attr,\n",
-    "                                 training_proportion=training_proportion,\n",
-    "                                 fun=fun,\n",
-    "                                 outcome_name=outcome_name,\n",
-    "                                 num_rep=num_rep)\n",
-    "\n",
-    "    return np.array(list(map(_testing_error_rep, tqdm(num_attr))))\n",
-    "\n",
-    "\n",
-    "print(r\"ABIDE_age_MI_ElasticNetCV\")  # dep_measure, fun_name\n",
-    "output = testing_error_num_attr(\n",
-    "    num_attr=list(\n",
-    "        map(int,\n",
-    "            np.around(np.linspace(0, len(columns), 50 + 1)[1:]).tolist())),\n",
-    "    training_proportion=.8,  # 80/20 training+validation/testing division\n",
-    "    fun=ElasticNetCV,  # fun_name\n",
-    "    outcome_name=\"AGE_AT_SCAN\",\n",
-    "    num_rep=10)\n",
-    "np.save(r\"./ABIDE_age_MI_ElasticNetCV\", output)  # dep_measure, fun_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-10T22:08:59.015533Z",
-     "start_time": "2023-02-10T22:08:58.938926Z"
+     "end_time": "2023-02-10T22:24:25.700798Z",
+     "start_time": "2023-02-10T22:24:25.614001Z"
     }
    },
    "outputs": [],
@@ -774,10 +509,9 @@
     "    r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
     "original_df = pd.read_csv(csv_file, encoding='unicode_escape', engine='c')\n",
     "\n",
-    "\n",
-    "columns = np.load(os.environ[\"SLURM_TMPDIR\"] + r\"../ABIDE_columns.npy\")\n",
+    "columns = np.load(os.environ[\"SLURM_TMPDIR\"] + r\"/ABIDE_columns.npy\")\n",
     "abide_dep = np.load(os.environ[\"SLURM_TMPDIR\"] +\n",
-    "                    r\"../ABIDE_age_{dep_measure}_output.npy\")  # dep_measure\n",
+    "                    r\"/ABIDE_age_{dep_measure}_output.npy\")  # dep_measure\n",
     "\n",
     "\n",
     "def testing_error(num_covariates=20,\n",
@@ -865,12 +599,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-10T22:09:03.281901Z",
-     "start_time": "2023-02-10T22:08:59.936682Z"
+     "end_time": "2023-02-10T22:24:29.120964Z",
+     "start_time": "2023-02-10T22:24:25.736758Z"
     }
    },
    "outputs": [],
