--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -30,7 +30,7 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.linear_model import LogisticRegressionCV\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "import multiprocess as mp\n",
     "from tqdm import tqdm as tqdm\n",
     "import os"
@@ -47,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-16T21:57:38.825549Z",
-     "start_time": "2023-02-16T21:57:38.792197Z"
+     "end_time": "2023-02-17T00:01:53.272588Z",
+     "start_time": "2023-02-17T00:01:53.239218Z"
     }
    },
    "outputs": [],
@@ -88,7 +88,7 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.linear_model import LogisticRegressionCV\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "import multiprocess as mp\n",
     "from tqdm import tqdm as tqdm\n",
     "import os\n",
@@ -263,12 +263,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-16T21:57:42.410626Z",
-     "start_time": "2023-02-16T21:57:39.122243Z"
+     "end_time": "2023-02-17T00:02:00.475750Z",
+     "start_time": "2023-02-17T00:01:54.576161Z"
     }
    },
    "outputs": [],
@@ -591,12 +591,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-16T21:57:47.670319Z",
-     "start_time": "2023-02-16T21:57:47.618002Z"
+     "end_time": "2023-02-17T00:02:00.541743Z",
+     "start_time": "2023-02-17T00:02:00.541693Z"
     }
    },
    "outputs": [],
@@ -672,7 +672,7 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.linear_model import LogisticRegressionCV\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "import multiprocess as mp\n",
     "from tqdm import tqdm as tqdm\n",
     "import os\n",
@@ -750,7 +750,7 @@
     "                      hidden_layer_sizes=(300, 300)).fit(X_train, y_train)\n",
     "            y_pred = fit.predict_proba(\n",
     "                X_test)[:, 0]  # predict probability to calculate ROC\n",
-    "            out = roc_curve(y_test, y_pred)\n",
+    "            out = roc_auc_score(y_test, y_pred)\n",
     "        elif fun in [\n",
     "                LogisticRegressionCV_l1, LogisticRegressionCV_l2,\n",
     "                LogisticRegressionCV_ElasticNet\n",
@@ -758,7 +758,7 @@
     "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict_proba(\n",
     "                X_test)[:, 0]  # predict probability to calculate ROC\n",
-    "            out = roc_curve(y_test, y_pred)\n",
+    "            out = roc_auc_score(y_test, y_pred)\n",
     "    else:\n",
     "        out = np.nan\n",
     "    return out\n",
@@ -819,12 +819,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-16T21:57:52.850029Z",
-     "start_time": "2023-02-16T21:57:48.561812Z"
+     "end_time": "2023-02-17T00:02:00.551753Z",
+     "start_time": "2023-02-17T00:02:00.551707Z"
     }
    },
    "outputs": [],
@@ -977,12 +977,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-16T21:57:58.083560Z",
-     "start_time": "2023-02-16T21:57:58.049428Z"
+     "end_time": "2023-02-17T00:02:03.180070Z",
+     "start_time": "2023-02-17T00:02:03.143004Z"
     }
    },
    "outputs": [],
@@ -1058,7 +1058,7 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.linear_model import LogisticRegressionCV\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "import multiprocess as mp\n",
     "from tqdm import tqdm as tqdm\n",
     "import os\n",
@@ -1137,7 +1137,7 @@
     "                      hidden_layer_sizes=(300, 300)).fit(X_train, y_train)\n",
     "            y_pred = fit.predict_proba(\n",
     "                X_test)[:, 0]  # predict probability to calculate ROC\n",
-    "            out = roc_curve(y_test, y_pred)\n",
+    "            out = roc_auc_score(y_test, y_pred)\n",
     "        elif fun in [\n",
     "                LogisticRegressionCV_l1, LogisticRegressionCV_l2,\n",
     "                LogisticRegressionCV_ElasticNet\n",
@@ -1145,7 +1145,7 @@
     "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict_proba(\n",
     "                X_test)[:, 0]  # predict probability to calculate ROC\n",
-    "            out = roc_curve(y_test, y_pred)\n",
+    "            out = roc_auc_score(y_test, y_pred)\n",
     "    else:\n",
     "        out = np.nan\n",
     "    return out\n",
@@ -1206,12 +1206,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-16T21:58:04.551114Z",
-     "start_time": "2023-02-16T21:57:59.093841Z"
+     "end_time": "2023-02-17T00:02:09.026088Z",
+     "start_time": "2023-02-17T00:02:03.438544Z"
     }
    },
    "outputs": [],
