--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -51,8 +51,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-17T00:01:53.272588Z",
-     "start_time": "2023-02-17T00:01:53.239218Z"
+     "end_time": "2023-02-17T02:30:36.705182Z",
+     "start_time": "2023-02-17T02:30:36.670211Z"
     }
    },
    "outputs": [],
@@ -267,8 +267,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-17T00:02:00.475750Z",
-     "start_time": "2023-02-17T00:01:54.576161Z"
+     "end_time": "2023-02-17T02:30:43.790689Z",
+     "start_time": "2023-02-17T02:30:37.504707Z"
     }
    },
    "outputs": [],
@@ -591,12 +591,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-17T00:02:00.541743Z",
-     "start_time": "2023-02-17T00:02:00.541693Z"
+     "end_time": "2023-02-17T02:30:44.733739Z",
+     "start_time": "2023-02-17T02:30:44.665703Z"
     }
    },
    "outputs": [],
@@ -621,7 +621,7 @@
     "#SBATCH --cpus-per-task=10\n",
     "#SBATCH --mem=80G\n",
     "#SBATCH --time=6-00:00:00\n",
-    "#SBATCH --job-name={dep_measure}_{fun_name}\n",
+    "#SBATCH --job-name=age_{dep_measure}_{fun_name}\n",
     "\n",
     "module load gcc llvm rust arrow cuda nodejs python/3.8.10 r/4.0.2 python-build-bundle\n",
     "\n",
@@ -749,7 +749,7 @@
     "                      max_iter=500,\n",
     "                      hidden_layer_sizes=(300, 300)).fit(X_train, y_train)\n",
     "            y_pred = fit.predict_proba(\n",
-    "                X_test)[:, 0]  # predict probability to calculate ROC\n",
+    "                X_test)[:, 1]  # predict probability to calculate ROC\n",
     "            out = roc_auc_score(y_test, y_pred)\n",
     "        elif fun in [\n",
     "                LogisticRegressionCV_l1, LogisticRegressionCV_l2,\n",
@@ -757,7 +757,7 @@
     "        ]:\n",
     "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict_proba(\n",
-    "                X_test)[:, 0]  # predict probability to calculate ROC\n",
+    "                X_test)[:, 1]  # predict probability to calculate ROC\n",
     "            out = roc_auc_score(y_test, y_pred)\n",
     "    else:\n",
     "        out = np.nan\n",
@@ -819,12 +819,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-17T00:02:00.551753Z",
-     "start_time": "2023-02-17T00:02:00.551707Z"
+     "end_time": "2023-02-17T02:30:51.287470Z",
+     "start_time": "2023-02-17T02:30:45.287772Z"
     }
    },
    "outputs": [],
@@ -977,12 +977,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-17T00:02:03.180070Z",
-     "start_time": "2023-02-17T00:02:03.143004Z"
+     "end_time": "2023-02-17T02:30:51.956018Z",
+     "start_time": "2023-02-17T02:30:51.922652Z"
     }
    },
    "outputs": [],
@@ -1007,7 +1007,7 @@
     "#SBATCH --cpus-per-task=10\n",
     "#SBATCH --mem=80G\n",
     "#SBATCH --time=6-00:00:00\n",
-    "#SBATCH --job-name={dep_measure}_{fun_name}\n",
+    "#SBATCH --job-name=diagnosis_{dep_measure}_{fun_name}\n",
     "\n",
     "module load gcc llvm rust arrow cuda nodejs python/3.8.10 r/4.0.2 python-build-bundle\n",
     "\n",
@@ -1136,7 +1136,7 @@
     "                      max_iter=500,\n",
     "                      hidden_layer_sizes=(300, 300)).fit(X_train, y_train)\n",
     "            y_pred = fit.predict_proba(\n",
-    "                X_test)[:, 0]  # predict probability to calculate ROC\n",
+    "                X_test)[:, 1]  # predict probability to calculate ROC\n",
     "            out = roc_auc_score(y_test, y_pred)\n",
     "        elif fun in [\n",
     "                LogisticRegressionCV_l1, LogisticRegressionCV_l2,\n",
@@ -1144,7 +1144,7 @@
     "        ]:\n",
     "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict_proba(\n",
-    "                X_test)[:, 0]  # predict probability to calculate ROC\n",
+    "                X_test)[:, 1]  # predict probability to calculate ROC\n",
     "            out = roc_auc_score(y_test, y_pred)\n",
     "    else:\n",
     "        out = np.nan\n",
@@ -1206,12 +1206,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-17T00:02:09.026088Z",
-     "start_time": "2023-02-17T00:02:03.438544Z"
+     "end_time": "2023-02-17T02:30:58.805842Z",
+     "start_time": "2023-02-17T02:30:52.519868Z"
     }
    },
    "outputs": [],
