--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:18:58.357428Z",
-     "start_time": "2023-02-18T01:18:57.395591Z"
+     "end_time": "2023-02-18T01:34:15.496703Z",
+     "start_time": "2023-02-18T01:34:14.515706Z"
     }
    },
    "outputs": [],
@@ -51,8 +51,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:18:58.365243Z",
-     "start_time": "2023-02-18T01:18:58.358592Z"
+     "end_time": "2023-02-18T01:34:15.505365Z",
+     "start_time": "2023-02-18T01:34:15.498165Z"
     }
    },
    "outputs": [],
@@ -253,14 +253,14 @@
     "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package KDEpy --version 1.1.0 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
     "# ### built nonconvexAG 1.0.6\n",
     "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package nonconvexAG --version 1.0.6 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
-    "# ### built fastHDMI 1.18.10\n",
-    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package fastHDMI --version 1.18.10 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
+    "# ### built fastHDMI 1.18.15\n",
+    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package fastHDMI --version 1.18.15 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
     "\n",
     "# Here basically to build the packages at login node and install them in slurm job submission locally\n",
     "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.0+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
-    "pip install --no-index /home/kyang/fastHDMI-1.18.10+computecanada-py3-none-any.whl\n",
+    "pip install --no-index /home/kyang/fastHDMI-1.18.15+computecanada-py3-none-any.whl\n",
     "\n",
     "nvidia-smi\n",
     "lscpu\n",
@@ -282,8 +282,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:19:05.166076Z",
-     "start_time": "2023-02-18T01:18:58.366864Z"
+     "end_time": "2023-02-18T01:34:22.318828Z",
+     "start_time": "2023-02-18T01:34:15.507224Z"
     }
    },
    "outputs": [],
@@ -313,8 +313,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:19:06.561266Z",
-     "start_time": "2023-02-18T01:19:05.168254Z"
+     "end_time": "2023-02-18T01:34:23.698920Z",
+     "start_time": "2023-02-18T01:34:22.321959Z"
     }
    },
    "outputs": [
@@ -387,8 +387,8 @@
    "id": "15cc2a2c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:19:07.657027Z",
-     "start_time": "2023-02-18T01:19:06.562508Z"
+     "end_time": "2023-02-18T01:34:24.775350Z",
+     "start_time": "2023-02-18T01:34:23.700139Z"
     }
    },
    "outputs": [
@@ -478,8 +478,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:19:08.173347Z",
-     "start_time": "2023-02-18T01:19:07.658331Z"
+     "end_time": "2023-02-18T01:34:25.274395Z",
+     "start_time": "2023-02-18T01:34:24.776804Z"
     }
    },
    "outputs": [
@@ -506,8 +506,8 @@
    "id": "6a6440b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:19:08.586692Z",
-     "start_time": "2023-02-18T01:19:08.174437Z"
+     "end_time": "2023-02-18T01:34:25.697549Z",
+     "start_time": "2023-02-18T01:34:25.275821Z"
     }
    },
    "outputs": [
@@ -546,8 +546,8 @@
    "id": "05d1f6d7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:19:08.750315Z",
-     "start_time": "2023-02-18T01:19:08.587823Z"
+     "end_time": "2023-02-18T01:34:25.871069Z",
+     "start_time": "2023-02-18T01:34:25.698905Z"
     }
    },
    "outputs": [
@@ -576,8 +576,8 @@
    "id": "31f92ad7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:19:08.804781Z",
-     "start_time": "2023-02-18T01:19:08.751371Z"
+     "end_time": "2023-02-18T01:34:25.934859Z",
+     "start_time": "2023-02-18T01:34:25.872502Z"
     }
    },
    "outputs": [
@@ -610,8 +610,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:19:08.813983Z",
-     "start_time": "2023-02-18T01:19:08.805965Z"
+     "end_time": "2023-02-18T01:34:25.948282Z",
+     "start_time": "2023-02-18T01:34:25.936220Z"
     }
    },
    "outputs": [],
@@ -652,14 +652,14 @@
     "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package KDEpy --version 1.1.0 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
     "# ### built nonconvexAG 1.0.6\n",
     "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package nonconvexAG --version 1.0.6 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
-    "# ### built fastHDMI 1.18.10\n",
-    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package fastHDMI --version 1.18.10 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
+    "# ### built fastHDMI 1.18.15\n",
+    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package fastHDMI --version 1.18.15 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
     "\n",
     "# Here basically to build the packages at login node and install them in slurm job submission locally\n",
     "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.0+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
-    "pip install --no-index /home/kyang/fastHDMI-1.18.10+computecanada-py3-none-any.whl\n",
+    "pip install --no-index /home/kyang/fastHDMI-1.18.15+computecanada-py3-none-any.whl\n",
     "\n",
     "nvidia-smi\n",
     "lscpu\n",
@@ -838,8 +838,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:19:14.823866Z",
-     "start_time": "2023-02-18T01:19:08.815501Z"
+     "end_time": "2023-02-18T01:34:32.588434Z",
+     "start_time": "2023-02-18T01:34:25.949715Z"
     }
    },
    "outputs": [],
@@ -865,8 +865,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:19:15.606533Z",
-     "start_time": "2023-02-18T01:19:14.840925Z"
+     "end_time": "2023-02-18T01:34:33.327608Z",
+     "start_time": "2023-02-18T01:34:32.595612Z"
     }
    },
    "outputs": [
@@ -927,8 +927,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1722124/3444889250.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0;34m\"MLPRegressor\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m ]:\n\u001b[0;32m---> 51\u001b[0;31m     \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/tmp/ipykernel_1722124/3444889250.py\u001b[0m in \u001b[0;36mplot_results\u001b[0;34m(_plt, fun_name)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_plt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_columns.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     ABIDE_age_MI_foo = np.load(\n\u001b[0m\u001b[1;32m      4\u001b[0m         r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(\n\u001b[1;32m      5\u001b[0m             fun_name=fun_name))\n",
+      "\u001b[0;32m/tmp/ipykernel_1737091/3444889250.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0;34m\"MLPRegressor\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m ]:\n\u001b[0;32m---> 51\u001b[0;31m     \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_1737091/3444889250.py\u001b[0m in \u001b[0;36mplot_results\u001b[0;34m(_plt, fun_name)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_plt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_columns.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     ABIDE_age_MI_foo = np.load(\n\u001b[0m\u001b[1;32m      4\u001b[0m         r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(\n\u001b[1;32m      5\u001b[0m             fun_name=fun_name))\n",
       "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    415\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    416\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 417\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    418\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    419\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './ABIDE_predict_age/ABIDE_age_MI_MLPRegressor.npy'"
      ]
@@ -1009,8 +1009,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:19:46.933493Z",
-     "start_time": "2023-02-18T01:19:46.894330Z"
+     "end_time": "2023-02-18T01:34:40.823107Z",
+     "start_time": "2023-02-18T01:34:40.786552Z"
     }
    },
    "outputs": [],
@@ -1051,14 +1051,14 @@
     "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package KDEpy --version 1.1.0 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
     "# ### built nonconvexAG 1.0.6\n",
     "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package nonconvexAG --version 1.0.6 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
-    "# ### built fastHDMI 1.18.10\n",
-    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package fastHDMI --version 1.18.10 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
+    "# ### built fastHDMI 1.18.15\n",
+    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package fastHDMI --version 1.18.15 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
     "\n",
     "# Here basically to build the packages at login node and install them in slurm job submission locally\n",
     "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.0+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
-    "pip install --no-index /home/kyang/fastHDMI-1.18.10+computecanada-py3-none-any.whl\n",
+    "pip install --no-index /home/kyang/fastHDMI-1.18.15+computecanada-py3-none-any.whl\n",
     "\n",
     "nvidia-smi\n",
     "lscpu\n",
@@ -1238,8 +1238,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:19:54.293909Z",
-     "start_time": "2023-02-18T01:19:47.362894Z"
+     "end_time": "2023-02-18T01:34:47.432494Z",
+     "start_time": "2023-02-18T01:34:41.223391Z"
     }
    },
    "outputs": [],
@@ -1261,15 +1261,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:19:15.612145Z",
-     "start_time": "2023-02-18T01:19:15.612136Z"
+     "end_time": "2023-02-18T01:34:55.942017Z",
+     "start_time": "2023-02-18T01:34:55.883396Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './ABIDE_predict_age/ABIDE_age_MI_LogisticRegressionCV_l1.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_1737091/25354492.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     42\u001b[0m         \u001b[0;34m\"LogisticRegressionCV_ElasticNet\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"MLPClassifier\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m ]:\n\u001b[0;32m---> 44\u001b[0;31m     \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_1737091/25354492.py\u001b[0m in \u001b[0;36mplot_results\u001b[0;34m(_plt, fun_name)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_plt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_columns.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     ABIDE_age_MI_foo = np.load(\n\u001b[0m\u001b[1;32m      4\u001b[0m         r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(\n\u001b[1;32m      5\u001b[0m             fun_name=fun_name))\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    415\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    416\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 417\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    418\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    419\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './ABIDE_predict_age/ABIDE_age_MI_LogisticRegressionCV_l1.npy'"
+     ]
+    }
+   ],
    "source": [
     "def plot_results(_plt, fun_name):\n",
     "    columns = np.load(r\"./ABIDE_columns.npy\")\n",
